# ibapi-python

./: .gitignore  LATENCY_OPTIMIZATION_ASSESSMENT.md  OPTIMIZATION_SUMMARY.md  benchmark_protobuf_performance.py  benchmark_socket_optimization.py  check_and_update.py  download_info.json  get_download_url.py  publish_to_pypi.py  pyproject.toml  update_ibapi.py
.github/workflows/: update-ibapi-latest.yml  update-ibapi-stable.yml  update-ibapi.yml
.tmp/: IMPLEMENTATION_SUMMARY.md  test_parser.py
example/: index.html
ibapi/: setup.py
ibapi/ibapi/: __init__.py  client.py  comm.py  server_versions.py
